- 0. 메인 화면 레이아웃 기준 상단으로 수정. - 1. 메인화면 배너 백그라운드 추가. - 2. 지도 갱신시 주소 갱신 안되는 부분 수정. - 3. 추천인 관리 UI Flow 추가 정리 - 4. 공지사항 선택시 효과 적용 - 5. 공지사항 상세보기 배경 변경 - 6. 결제 요청 페이지 테스트 진행 - 7. 결제 후 리턴 받을 페이지 => 타운넷 웹 파트에 요청(전달 jsp,php -> asp 변경해야함) - 8. 로그인시 서버에서 받아 올 파리메터 추가 (내 포인트, 1촌, 2촌, 누적 포인트)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -261,6 +262,13 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="LockedOrientationActivity" /> <!-- 내정보 이용및약관 시작 -->
+
+        <activity
+            android:name=".PayApproveActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="LockedOrientationActivity" /> <!-- 나이스 결제 시작 -->
+
         <activity android:name=".TemplateActivity" /> <!-- template activity -->
         <provider
             android:name="androidx.core.content.FileProvider"
