0. - 퍼미션 페이지 추가 1. - 설정 페이지 : 알림 설정시 서버 연동 구현, 회원 탈퇴 서버 연동 구현 2. - 결재 연동 테스트(Bridge 함수 추가) 3. - 결재 페이지 하단 버튼 width 조정 4. - 결재 페이지 카드 선택 부분 삭제 5. - 이용내역 리스트 받을 때 페이징 처리 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,31 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="a" /> <!-- isp 커스텀스키마 -->
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="a" /> <!-- 계좌이체 커스텀스키마 -->
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="a" /> <!-- paypin 커스텀스키마 -->
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="a" /> <!-- paynow 커스텀스키마 -->
+            </intent-filter>
         </activity>
         <activity
             android:name=".LoginActivityPre"
