3. - 할인 수단 계산 flow 넣기 4. - 예약 완료 페이지 추가 5. - 예약 페이지 테스트 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -292,7 +292,14 @@
             android:name=".PayApproveActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            tools:ignore="LockedOrientationActivity" /> <!-- 나이스 결제 시작 -->
+            tools:ignore="LockedOrientationActivity" /> <!-- 결제 시작 -->
+
+        <activity
+            android:name=".PayApproveResult"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="LockedOrientationActivity" /> <!-- 결제 완료 -->
+
 
         <activity android:name=".TemplateActivity" /> <!-- template activity -->
         <provider
