3/24(화) 0. - 이미지 전체적으로 체크해서 적해주기. 1. - 로그인 페이지 back 기능 추가 2. - 차량 등록 : 차량 번호 입력 UI 변경 3. - 포인트 입력 : 완료시 계산. 보유 현황은 그대로. 4. - 입력창 커서 맨 뒤로 수정.(포인트 입력, 제조사 및 차량 모델명 입력) 5. - 디자인에 맞게 배경색 조정(전 페이지) 6. - 예약 : 취소 정책 상세 설명 UI 추가 7. - 텍스트 선택시 색상 추가 8. - 약관 청책 UI 추가 9. - 부가 서비스가 없을 때 UI 추가 0. - 예약취소 날짜 안보이는거 수정. 3/25(수) 1. - 회원가입 : 추천인 코드 건너뛰기 기능 구현 2. - 회원가입 : 약관 동의 화면 추가 및 기능 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -312,6 +312,36 @@
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="LockedOrientationActivity" /> <!-- 취소정책 상세 -->
 
+        <activity
+            android:name=".MemberJoinActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="LockedOrientationActivity" /> <!-- 회원가입 시작 -->
+
+        <activity
+            android:name=".MemberAuthActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="LockedOrientationActivity" /> <!-- 인증번호 시작 -->
+
+        <activity
+            android:name=".MemberNickNameActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="LockedOrientationActivity" /> <!-- 본인실명 시작 -->
+
+        <activity
+            android:name=".MemberRecomActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="LockedOrientationActivity" /> <!-- 본인실명 시작 -->
+
+        <activity
+            android:name=".MemberJoinTermsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="LockedOrientationActivity" /> <!-- 약관동의 시작 -->
+
         <activity android:name=".TemplateActivity" /> <!-- template activity -->
         <provider
             android:name="androidx.core.content.FileProvider"
