--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 10
         versionName "1.0.10"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -56,4 +57,9 @@ dependencies {
     // picasso - image loadder
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    // glide
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    //multi-dex
+    implementation 'com.android.support:multidex:1.0.3'
 }
