--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
 
     implementation 'com.android.support:design:28.0.0'
 
+    // SwipeRefreshLayout
+    implementation 'com.android.support:support-v4:28.0.0'
+
     // volley
     implementation 'com.android.volley:volley:1.1.1'
 
