--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".sy_rentcar.Rental_list_detail_insu_recycle_item"></activity>
+        <activity android:name=".sy_rentcar.Rental_pay_web"></activity>
+        <activity android:name=".sy_rentcar.Rental_list_detail_insu_recycle_item" />
         <activity android:name=".sy_rentcar.Rental_car_delivery_map" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
